--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "motion": "^12.4.2",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
