--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "styled-components": "^6.1.15",
