--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,16 +28,18 @@ jobs:
         with:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_KEY }}
           ARGS: "-rlgoDzvc -i --delete"
+          SOURCE: ".next/standalone/ .next/static package.json package-lock.json public"
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-          EXCLUDE: "/node_modules/, /.git/, /.github/, /.next/"
+          EXCLUDE: "/node_modules/"
           SCRIPT_BEFORE: |
             whoami
             mkdir -p ${{ secrets.REMOTE_TARGET }}
           SCRIPT_BEFORE_REQUIRED: true
           SCRIPT_AFTER: |
             cd "${{ secrets.REMOTE_TARGET }}"
+            mv -p static .next/static
             screen -S sapphire-landing -X quit || true
             
             if ! command -v nvm &> /dev/null; then
@@ -52,5 +54,5 @@ jobs:
             npm ci --production
             
             echo "Starting landing..."
-            screen -S sapphire-landing -d -m ${which npm} run start
+            screen -S sapphire-landing -d -m ${which node} server.js
           SCRIPT_AFTER_REQUIRED: true
