--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "sonner": "^2.0.5",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
