--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "date-fns": "^2.29.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
-    "ifsc": "^2.0.44",
+    "ifsc": "^1.1.8",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
-    "next": "15.1.6",
+    "next": "^15.3.4",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
